<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_DMComponents" Id="{16dc0324-7154-4f6e-a4dd-43a61162c694}">
    <Declaration><![CDATA[(*
		This structure is used enable efficient passing device FBs by reference to sub-FBs of the 
		machine FB, while maintaining an instance of each plant component at the 
		highest heirarchy level within the machine FB 
*)

TYPE ST_DMComponents :
STRUCT
	(*
					ACTUATORS (devices that can perform an action)
	*)	

	// Actuated Valves
	fbValve_DosingSupply: 		POINTER TO FB_Valve_ONOFF_woMonitoring;
	fbValve_IrrigatorSupply: 	POINTER TO FB_Valve_ONOFF_woMonitoring; 
	fbValve_WasteWaterReturn: 	POINTER TO FB_Valve_ONOFF_woMonitoring;
	fbValve_DrumFilterRinse: 	POINTER TO FB_Valve_ONOFF_woMonitoring;
	
	// Vendor Units	
	fbUnit_OxyInjector: 		POINTER TO FB_OxygenInjector;	

	// VSD Pumps
	fbPump_MainPumpA: POINTER TO FB_PumpVSD_DanfossFC202;	 
	fbPump_MainPumpB: POINTER TO FB_PumpVSD_DanfossFC202;	 	 
	
	// Filters and Cleaners
	//fbDrumFilter1:				POINTER TO FB_DrumFilter_Faivre120;
	fbUnit_UltraSonCleaner: 	POINTER TO FB_UltraSonicCleaner;
	fbUVFilter1:				POINTER TO FB_UVFilter_UltraAqua_MR4_220PP;
	fbStrainer:					POINTER TO FB_AutoClean_Filter_Bollfilter;
	
	// Passive Components
	fbSumpDosing: 				POINTER TO FB_Tank;
	
	// Dosing Pumps
	fbDosingPump_phUp : POINTER TO FB_DosingPumpPRISMA;
	fbDosingPump_phDown : POINTER TO FB_DosingPumpPRISMA;
	fbDosingPump_NutrientA	: POINTER TO FB_DosingPumpPRISMA;	
	fbDosingPump_NutrientB	: POINTER TO FB_DosingPumpPRISMA;
	fbDosingPump_NutrientC	: POINTER TO FB_DosingPumpPRISMA;
	
	(*
					SENSORS (devices that measure)

	*)	
	// Atlas Sensors
	fbSensor_DissOx1: POINTER TO FB_Sensor_AtlasDO;
	fbSensor_DissOx2: POINTER TO FB_Sensor_AtlasDO;
	fbSensor_DissOx:  POINTER TO FB_DualRedundantSensor;
	
	fbSensor_EC1: POINTER TO FB_Sensor_AtlasEC;
	fbSensor_EC2: POINTER TO FB_Sensor_AtlasEC;
	fbSensor_EC:  POINTER TO FB_DualRedundantSensor;
	
	fbSensor_ORP1: POINTER TO FB_Sensor_AtlasORP;
	fbSensor_ORP2: POINTER TO FB_Sensor_AtlasORP;
	fbSensor_ORP:  POINTER TO FB_DualRedundantSensor;
	
	fbSensor_PH1: POINTER TO FB_Sensor_AtlasPH;
	fbSensor_PH2: POINTER TO FB_Sensor_AtlasPH;
	fbSensor_PH:  POINTER TO FB_DualRedundantSensor;
	
	fbSensor_TMP1: POINTER TO FB_Sensor_AtlasTEMP;
	fbSensor_TMP2: POINTER TO FB_Sensor_AtlasTEMP;
	fbSensor_TMP:  POINTER TO FB_DualRedundantSensor;
	
	fbSensor_SumpLIT1: POINTER TO FB_Sensor_4_20mA_Generic;
	fbSensor_SumpLIT2: POINTER TO FB_Sensor_4_20mA_Generic;
	fbSensor_SumpLIT:  POINTER TO FB_DualRedundantSensor;
 
	fbSensor_FilterPIT1: POINTER TO FB_Sensor_IFM_PG2453;
	fbSensor_FilterPIT2: POINTER TO FB_Sensor_IFM_PG2453;
	fbSensor_DosingPIT1: POINTER TO FB_Sensor_IFM_PG2453;
	
	// Nutrient Tanks
	fbTank_pHUP: POINTER TO FB_Tank;
	fbTank_pHDown: POINTER TO FB_Tank;
	fbTank_NutrientA: POINTER TO FB_Tank;
	fbTank_NutrientB: POINTER TO FB_Tank;
	fbTank_NutrientC: POINTER TO FB_Tank;

	(*
				CONTROL LOOPS (an algorithm that uses sensor data to compute which commans should be sent to actuators)

	*)
		
	// Control Loops
	fbControlLoop_Dosing: POINTER TO FB_ControlLoop_Dosing;
	// fbControlLoop_LevelControl:       <---- in development
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>