<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SensorType" Id="{ad3ff714-c664-4e52-a4f4-a558d325d77f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SensorType :
(
	Analogue,
	Digital,
	Level
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>